--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="timeline__item">
       <div class="timeline__date">July 2022 - Sep 2022</div>
       <div class="timeline__content">
-        <h3>Software Engineer Intern - Nutrifood</h3>
+        <h3>Software Engineer Intern - Nutrifood (Bandung,Indonesia)</h3>
         <p>Contributed to the development of an internal application using the Django framework (Python).  
           Specifically responsible for implementing features related to uploading, deleting, and managing video content.</p>
       </div>
@@ -215,3 +215,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
