--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           In addition, I have experience in developing Python-based applications using the Django framework, along with a solid foundation in HTML, CSS, and JavaScript, which enables me to understand how UI/UX designs can be effectively implemented in system development.
         </p>
         <div class="about__btn">
-          <button class="btn">Download CV</button>
+          <a href="CV ATS.png"><button class="btn">Download CV</button></a>a>
         </div>
       </div>
     </section>
@@ -215,4 +215,5 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
