--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           In addition, I have experience in developing Python-based applications using the Django framework, along with a solid foundation in HTML, CSS, and JavaScript, which enables me to understand how UI/UX designs can be effectively implemented in system development.
         </p>
         <div class="about__btn">
-          <a href="CV ATS.png"><button class="btn">Download CV</button></a>a>
+          <a href="CV ATS.png"><button class="btn">Download CV</button></a>
         </div>
       </div>
     </section>
@@ -151,6 +151,35 @@
           </a>
         </div>
     </section>
+    
+    <section class="section__container certificate__container" id="certificate">
+  <h2 class="section__header">Certificates</h2>
+  <p class="section__description">
+    Here are some of the certifications I have achieved.  
+    (Detail certifications in 
+    <a href="https://bit.ly/Certif-Rezi" target="_blank">Google Drive</a>)
+  </p>
+
+  <div class="certificate__grid">
+    <div class="certificate__card">
+      <img src="assets/certificate-1.png" alt="Certificate 1" />
+      <h4>Responsive Web Design</h4>
+      <p>freeCampCode.org - Dec 2024</p>
+    </div>
+    <div class="certificate__card">
+      <img src="assets/certificate-2.png" alt="Certificate 2" />
+      <h4>Scientific Computing with Python</h4>
+      <p>freeCampCode.org - Apr 2025</p>
+    </div>
+    <div class="certificate__card">
+      <img src="assets/certificate-3.png" alt="Certificate 3" />
+      <h4>Design System in UI Design</h4>
+      <p>MySkill.id - Dec 2023</p>
+    </div>
+    <!-- Tambahkan lagi sesuai kebutuhan -->
+  </div>
+</section>
+
 <section class="section__container editing__container" id="photoshop">
   <h2 class="section__header">Photoshop Editing</h2>
   <p class="section__description">
@@ -215,5 +244,6 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
 
