--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
   <h2 class="section__header">Certificates</h2>
   <p class="section__description">
     Here are some of the certifications I have achieved.  
-    <p>(Detail certifications in 
-    <a href="https://bit.ly/Certif-Rezi" target="_blank"><b>Google Drive<b/></a>)</p>
+    <p class="section__description">(Detail certifications in 
+    <a href="https://bit.ly/Certif-Rezi" target="_blank"><b>Google Drive<b/></a>)
+    </p>
   </p>
 
   <div class="certificate__grid">
@@ -244,6 +245,7 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
 
 
