--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="contact__socials">
         <a href="https://www.linkedin.com/in/reziichsannurarsyi/"><i class="ri-linkedin-fill"></i></a>
         <a href="https://www.tiktok.com/@vanillalatte_zii"><i class="ri-tiktok-fill"></i></a>
-        <a href="https://www.instagram.com/reziichsan?igsh=MXFrbXcxNzBkcnp5aQ=="><i class="ri-instagram-line"></i></a>
+        <a href="https://www.instagram.com/jiwoo_reziichsan?igsh=MXFrbXcxNzBkcnp5aQ=="><i class="ri-instagram-line"></i></a>
 
       </div>
     </section>
@@ -245,6 +245,7 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
 
 
